test/files/neg/t7187-deprecation.check
t7187-deprecation.scala:17: error: type mismatch;
 found   : Int
 required: () => Any
  val t1: () => Any  = m1   // error
                       ^
t7187-deprecation.scala:19: error: type mismatch;
 found   : Int
 required: AcciSamZero
  val t2AcciSam: AcciSamZero = m2 // error, nilary methods don't eta-expand to SAM types under -Xsource:3
                               ^
t7187-deprecation.scala:20: error: type mismatch;
 found   : Int
 required: SamZero
  val t2Sam: SamZero = m2         // error, nilary methods don't eta-expand to SAM types under -Xsource:3
                       ^
t7187-deprecation.scala:31: error: Methods without a parameter list and by-name params can not be converted to functions as `m _`, write a function literal `() => m` instead
  val t7 = m1 _ // error: eta-expanding a nullary method
           ^
t7187-deprecation.scala:24: warning: Auto-application to `()` is deprecated. Supply the empty argument list `()` explicitly to invoke method m2,
or remove the empty argument list from its definition (Java-defined methods are exempt).
In Scala 3, an unapplied method like this will be eta-expanded into a function.
  val t5 = m2 // warn: apply, ()-insertion
           ^
t7187-deprecation.scala:40: warning: Auto-application to `()` is deprecated. Supply the empty argument list `()` explicitly to invoke method boom,
or remove the empty argument list from its definition (Java-defined methods are exempt).
In Scala 3, an unapplied method like this will be eta-expanded into a function.
  a.boom // warning: apply, ()-insertion
    ^
2 warnings
4 errors
